<resources>
    <string name="app_name">Curhatin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="et_email_error_message">Email address does not match</string>
    <string name="password">Password</string>
    <string name="et_password_error_message">Password is too short</string>
    <string name="image_login">Image Login</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="textview">Do not have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="image_register">Image Register</string>
    <string name="username">Username</string>
    <string name="et_name_error_message">Username cannot be empty</string>
    <string name="et_phone_error_message">Phone number cannot be empty</string>
    <string name="et_str_error_message">STR number cannot be empty</string>
    <string name="desc_login">By signin up,  you’re agree to our</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="phone">Phone Number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="signup_as_doctor">Sign up as a doctor?</string>
    <string name="click_here">Click here</string>
    <string name="have_account">Have an account?</string>
    <string name="str">STR Number</string>
    <string name="signup_as_user">Sign up as a user?</string>
    <string name="forgot">Forgot</string>
    <string name="password2">Password?</string>
    <string name="desc_forgot_password">Don’t worry! It happens. Please enter the address associated with your account.</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="et_password_null_error_message">Please confirm your password</string>
    <string name="change_password">Change Password</string>
    <string name="get_premium">Get Premium</string>
    <string name="chat_with_psychologist">Chat with Psychologist</string>
    <string name="premium_desc">You can chat and consult with psychologists to solve your problems and complaints.</string>
    <string name="premium_price">Rp. 100,000/month</string>
    <string name="search_hint">Search chat...</string>
    <string name="search_doctor">Search doctor...</string>
    <string name="nama_dokter">Nama Dokter</string>
    <string name="sp_doc">Spesialis Dokter</string>
    <string name="experience">Experience</string>
    <string name="review">Review</string>
    <string name="anonimous">Anonimous</string>
    <string name="pesan">pesan</string>
    <string name="jam">jam</string>
    <string name="hr_ago">2hr ago</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>

</resources>