<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    app:cardCornerRadius="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_picture"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:contentDescription=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/nama_dokter"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_specialist"
            app:layout_constraintStart_toStartOf="@+id/tv_specialist"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_specialist"
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/poppins"
            android:text="@string/sp_doc"
            android:textSize="8sp"
            app:layout_constraintStart_toEndOf="@+id/iv_picture"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <View
            android:id="@+id/view"
            android:layout_width="296dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:background="@color/light_gray"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_picture"
            app:layout_constraintTop_toBottomOf="@+id/tv_specialist" />

        <TextView
            android:id="@+id/tv_experience"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_info_doctor"
            android:drawableStart="@drawable/ic_job"
            android:fontFamily="@font/poppins"
            android:padding="2dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            tools:text="@string/experience"
            android:textSize="8sp"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/tv_review"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_info_doctor"
            android:drawableStart="@drawable/ic_review"
            android:fontFamily="@font/poppins"
            android:padding="2dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/review"
            android:textSize="8sp"
            app:layout_constraintStart_toEndOf="@+id/tv_experience"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="1dp"
            android:src="@drawable/ic_chat"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>




